# bike-predict

./: .gitignore  Dockerfile  README.md  docker-compose.yml  extract_next.py  pyproject.toml  requirements-docker.txt  requirements.txt  run_pipeline.py  test.html  test.json
mlruns/360855911903620175/: meta.yaml
mlruns/360855911903620175/291689784e184ce6ad746dff0bf81fd9/: meta.yaml
mlruns/360855911903620175/291689784e184ce6ad746dff0bf81fd9/artifacts/model/: MLmodel  conda.yaml  requirements.txt
mlruns/360855911903620175/291689784e184ce6ad746dff0bf81fd9/metrics/: mae  r2  rmse
mlruns/360855911903620175/291689784e184ce6ad746dff0bf81fd9/tags/: mlflow.log-model.history  mlflow.runName
mlruns/360855911903620175/64434f01339b49cdbb555a8116dd4386/: meta.yaml
mlruns/360855911903620175/64434f01339b49cdbb555a8116dd4386/metrics/: mae  r2  rmse
mlruns/360855911903620175/64434f01339b49cdbb555a8116dd4386/tags/: mlflow.log-model.history  mlflow.runName
mlruns/models/motos-price-regressor/: meta.yaml
mlruns/models/motos-price-regressor/version-1/: meta.yaml
mlruns/models/motos-price-regressor/version-2/: meta.yaml
notebooks/: 01_exploracion_bronze.py  02_ingest_bronze.py  03_bronze_to_silver.py  04_silver_to_gold.py  05_train_model.py
src/ml/: training.py
src/motos_ml/: config.py  dto.py
src/motos_ml/ingestion/: bronze_writer.py
src/motos_ml/ml/: training.py
src/motos_ml/scraping/: client.py  moto_ocasion_client.py  parser.py
src/motos_ml/transforms/: gold_features.py  silver_cleaning.py
(+47 files in other folders)
